Table users {
  id uuid [pk, unique, not null]
  full_name string [not null]
  greeting_name string
  email string [unique, not null]
  phone_number string
  phone_type string
  opt_in_text boolean [not null, default: true]
  opt_in_email boolean [not null, default: true]
  organization string [not null]
  password string [not null] // devise
  active boolean [not null, default: true]
  language string [not null]
  confirmed boolean [not null, default: false] // devise
  service_agreement_accepted boolean [not null, default: false]
  timezone string [not null]
}

Enum license_types {
  licensed_center
  licensed_family_home
  licensed_group_home
  license_exempt_home
  license_exempt_center
}

Table businesses {
  id uuid [pk, unique, not null]
  user_id uuid [ref: > users.id, not null]
  license_type license_types [not null]
  name string [not null]
  active boolean [not null, default: true]
  // fix this
  qris_rating state_qris_ratings
  zip_id uuid [not null]
  county_id uuid [not null]
}

Table children {
  id uuid [pk, unique, not null]
  business_id uuid [ref: > businesses.id, not null]
  full_name string [not null]
  date_of_birth date [not null]
  active boolean [not null, default: true]
}

Enum copay_frequencies {
  daily
  weekly
  monthly
}

Table case_cycles {
  id uuid [pk, unique, not null]
  business_id uuid [ref: > businesses.id, not null]
  case_number string
  copay monetize
  copay_frequency copay_frequencies
  effective_on date
  expires_on date
}

Enum allowance_intervals {
  weekly
  monthly
  annually
}

Table child_case_cycles {
  id uuid [pk, unique, not null]
  subsidy_rule_id uuid [ref: > subsidy_rules.id, not null]
  case_cycle_id uuid [ref: > case_cycles.id, not null]
  child_id uuid [ref: > children.id, not null]
}

Table child_case_cycle_rate_types {
  id uuid [pk, unique, not null]
  child_case_cycle_id uuid [ref: > child_case_cycles.id, not null]
  rate_type_id uuid [ref: > rate_types.id, not null]
  approved_amount decimal [not null]
}

Enum duration_definitions {
  part_day
  full_day
  full_plus_part_day
  full_plus_full_day
}

Table rate_types {
  id uuid [pk, unique, not null]
  name string [not null]
  state_id uuid [ref: > lookup_states.id, not null]
  amount monetize [not null]
  max_duration decimal
  threshold decimal
}

Table line_items {
  id uuid [pk, unique, not null]
  child_case_cycle_id uuid [ref: > child_case_cycles.id, not null]
  starts_on date [not null]
}

Table attendances {
  id uuid [pk, unique, not null]
  line_item_id uuid [ref: > line_items.id, not null]
  check_in time
  check_out time
  total_time_in_care duration
}

Table line_item_rate_types {
  id uuid [pk, unique, not null]
  line_item_id uuid [ref: > line_items.id, not null]
  rate_type_id uuid [ref: > rate_types.id, not null]
}

Table subsidy_rules [headercolor: #8e44ad] {
  id uuid [pk, unique, not null]
  name string [not null]
  county_id uuid
  max_age decimal
  license_type license_types [not null]
  
  Note: "Multiple table inheritance to the states"
}

Table subsidy_rule_rate_types {
  id uuid [pk, unique, not null]
  subsidy_rule_id uuid [ref: > subsidy_rules.id, not null]
  rate_type_id uuid [ref: > rate_types.id, not null]
}

Table illinois_subsidy_rules {
  subsidy_rule_id uuid [ref: > subsidy_rules.id, not null]
  bronze_percentage decimal [not null]
  silver_percentage decimal [not null]
  gold_percentage decimal [not null]
}

Enum state_qris_ratings {
  illinois_qris_ratings
  nebraska_qris_ratings
}

Enum illinois_qris_ratings {
  na
  bronze
  silver
  gold
}

Enum nebraska_qris_ratings {
  1
  2
  3
  4
  5
}

Table nebraska_subsidy_rules {
  subsidy_rule_id uuid [ref: > subsidy_rules.id, not null]
  qris_1_percentage decimal
  qris_2_percentage decimal
  qris_3_percentage decimal
  qris_4_percentage decimal
  qris_5_percentage decimal
  
  Note: "still in reserach"
}

Table lookup_cities [headercolor: #27ae60] {
  id uuid [not null, default: `gen_random_uuid()`]
  name varchar [not null]
  state_id uuid [not null]
  county_id uuid
}

Table lookup_counties [headercolor: #27ae60] {
  id uuid [not null, default: `gen_random_uuid()`]
  state_id uuid
  abbr varchar
  name varchar [not null]
  county_seat varchar
}

Table lookup_states [headercolor: #27ae60] {
  id uuid [not null, default: `gen_random_uuid()`]
  abbr varchar(2) [not null]
  name varchar [not null]
}

Table lookup_zipcodes [headercolor: #27ae60] {
  id uuid [not null, default: `gen_random_uuid()`]
  code varchar [not null]
  state_id uuid
  county_id uuid
  city_id uuid
  area_code varchar
  lat numeric(15, 10)
  lon numeric(15, 10)
}